LastCleanVersion/parser.output
Terminals unused in grammar

   tCOMPARAISON
   tINFSTRICT
   tSUPSTRICT
   tSUPEGAL
   tINFEGAL
   tDIFF
   tNOT
   tCONST


Grammaire

    0 $accept: Program $end

    1 Program: Type tMAIN tOP tCP Body

    2 Type: tINT
    3     | tFLOAT
    4     | tVOID
    5     | tCHAR

    6 Val: tINT_VAL
    7    | tFLOAT_VAL
    8    | tCHAR_VAL

    9 Body: tOB Instruction tCB

   10 Expression: Val
   11           | Expression tPLUS Expression
   12           | Expression tMOINS Expression
   13           | Expression tFOIS Expression
   14           | Expression tDIVISE Expression
   15           | tMOINS Expression
   16           | tOP Expression tCP
   17           | tVAR

   18 Liste: tVAR tCOMMA Liste
   19      | tVAR tVIRG Instruction

   20 Instruction: Type tVAR tEGAL Expression tVIRG Instruction
   21            | Type tVAR tVIRG Instruction
   22            | Type tVAR tCOMMA Liste
   23            | tVAR tEGAL Expression tVIRG Instruction
   24            | tPRINTF tOP tVAR tCP tVIRG Instruction
   25            | tRETURN tVAR tVIRG
   26            | tRETURN Val tVIRG
   27            | tRETURN tOP tVAR tCP tVIRG
   28            | tRETURN tOP Val tCP tVIRG
   29            | /* vide */


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tPLUS (258) 11
tMOINS (259) 12 15
tFOIS (260) 13
tDIVISE (261) 14
tCOMMA (262) 18 22
tOP (263) 1 16 24 27 28
tCP (264) 1 16 24 27 28
tOB (265) 9
tCB (266) 9
tVAR (267) 17 18 19 20 21 22 23 24 25 27
tCOMPARAISON (268)
tEGAL (269) 20 23
tINFSTRICT (270)
tSUPSTRICT (271)
tSUPEGAL (272)
tINFEGAL (273)
tDIFF (274)
tNOT (275)
tINT (276) 2
tVOID (277) 4
tCHAR (278) 5
tFLOAT (279) 3
tVIRG (280) 19 20 21 23 24 25 26 27 28
tMAIN (281) 1
tCONST (282)
tINT_VAL (283) 6
tFLOAT_VAL (284) 7
tCHAR_VAL (285) 8
tRETURN (286) 25 26 27 28
tPRINTF (287) 24
tNEG (288)


Non-terminaux, suivis des règles où ils apparaissent

$accept (34)
    à gauche: 0
Program (35)
    à gauche: 1, à droite: 0
Type (36)
    à gauche: 2 3 4 5, à droite: 1 20 21 22
Val (37)
    à gauche: 6 7 8, à droite: 10 26 28
Body (38)
    à gauche: 9, à droite: 1
Expression (39)
    à gauche: 10 11 12 13 14 15 16 17, à droite: 11 12 13 14 15 16
    20 23
Liste (40)
    à gauche: 18 19, à droite: 18 22
Instruction (41)
    à gauche: 20 21 22 23 24 25 26 27 28 29, à droite: 9 19 20 21 23
    24


état 0

    0 $accept: . Program $end

    tINT    décalage et aller à l'état 1
    tVOID   décalage et aller à l'état 2
    tCHAR   décalage et aller à l'état 3
    tFLOAT  décalage et aller à l'état 4

    Program  aller à l'état 5
    Type     aller à l'état 6


état 1

    2 Type: tINT .

    $défaut  réduction par utilisation de la règle 2 (Type)


état 2

    4 Type: tVOID .

    $défaut  réduction par utilisation de la règle 4 (Type)


état 3

    5 Type: tCHAR .

    $défaut  réduction par utilisation de la règle 5 (Type)


état 4

    3 Type: tFLOAT .

    $défaut  réduction par utilisation de la règle 3 (Type)


état 5

    0 $accept: Program . $end

    $end  décalage et aller à l'état 7


état 6

    1 Program: Type . tMAIN tOP tCP Body

    tMAIN  décalage et aller à l'état 8


état 7

    0 $accept: Program $end .

    $défaut  accepter


état 8

    1 Program: Type tMAIN . tOP tCP Body

    tOP  décalage et aller à l'état 9


état 9

    1 Program: Type tMAIN tOP . tCP Body

    tCP  décalage et aller à l'état 10


état 10

    1 Program: Type tMAIN tOP tCP . Body

    tOB  décalage et aller à l'état 11

    Body  aller à l'état 12


état 11

    9 Body: tOB . Instruction tCB

    tVAR     décalage et aller à l'état 13
    tINT     décalage et aller à l'état 1
    tVOID    décalage et aller à l'état 2
    tCHAR    décalage et aller à l'état 3
    tFLOAT   décalage et aller à l'état 4
    tRETURN  décalage et aller à l'état 14
    tPRINTF  décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 29 (Instruction)

    Type         aller à l'état 16
    Instruction  aller à l'état 17


état 12

    1 Program: Type tMAIN tOP tCP Body .

    $défaut  réduction par utilisation de la règle 1 (Program)


état 13

   23 Instruction: tVAR . tEGAL Expression tVIRG Instruction

    tEGAL  décalage et aller à l'état 18


état 14

   25 Instruction: tRETURN . tVAR tVIRG
   26            | tRETURN . Val tVIRG
   27            | tRETURN . tOP tVAR tCP tVIRG
   28            | tRETURN . tOP Val tCP tVIRG

    tOP         décalage et aller à l'état 19
    tVAR        décalage et aller à l'état 20
    tINT_VAL    décalage et aller à l'état 21
    tFLOAT_VAL  décalage et aller à l'état 22
    tCHAR_VAL   décalage et aller à l'état 23

    Val  aller à l'état 24


état 15

   24 Instruction: tPRINTF . tOP tVAR tCP tVIRG Instruction

    tOP  décalage et aller à l'état 25


état 16

   20 Instruction: Type . tVAR tEGAL Expression tVIRG Instruction
   21            | Type . tVAR tVIRG Instruction
   22            | Type . tVAR tCOMMA Liste

    tVAR  décalage et aller à l'état 26


état 17

    9 Body: tOB Instruction . tCB

    tCB  décalage et aller à l'état 27


état 18

   23 Instruction: tVAR tEGAL . Expression tVIRG Instruction

    tMOINS      décalage et aller à l'état 28
    tOP         décalage et aller à l'état 29
    tVAR        décalage et aller à l'état 30
    tINT_VAL    décalage et aller à l'état 21
    tFLOAT_VAL  décalage et aller à l'état 22
    tCHAR_VAL   décalage et aller à l'état 23

    Val         aller à l'état 31
    Expression  aller à l'état 32


état 19

   27 Instruction: tRETURN tOP . tVAR tCP tVIRG
   28            | tRETURN tOP . Val tCP tVIRG

    tVAR        décalage et aller à l'état 33
    tINT_VAL    décalage et aller à l'état 21
    tFLOAT_VAL  décalage et aller à l'état 22
    tCHAR_VAL   décalage et aller à l'état 23

    Val  aller à l'état 34


état 20

   25 Instruction: tRETURN tVAR . tVIRG

    tVIRG  décalage et aller à l'état 35


état 21

    6 Val: tINT_VAL .

    $défaut  réduction par utilisation de la règle 6 (Val)


état 22

    7 Val: tFLOAT_VAL .

    $défaut  réduction par utilisation de la règle 7 (Val)


état 23

    8 Val: tCHAR_VAL .

    $défaut  réduction par utilisation de la règle 8 (Val)


état 24

   26 Instruction: tRETURN Val . tVIRG

    tVIRG  décalage et aller à l'état 36


état 25

   24 Instruction: tPRINTF tOP . tVAR tCP tVIRG Instruction

    tVAR  décalage et aller à l'état 37


état 26

   20 Instruction: Type tVAR . tEGAL Expression tVIRG Instruction
   21            | Type tVAR . tVIRG Instruction
   22            | Type tVAR . tCOMMA Liste

    tCOMMA  décalage et aller à l'état 38
    tEGAL   décalage et aller à l'état 39
    tVIRG   décalage et aller à l'état 40


état 27

    9 Body: tOB Instruction tCB .

    $défaut  réduction par utilisation de la règle 9 (Body)


état 28

   15 Expression: tMOINS . Expression

    tMOINS      décalage et aller à l'état 28
    tOP         décalage et aller à l'état 29
    tVAR        décalage et aller à l'état 30
    tINT_VAL    décalage et aller à l'état 21
    tFLOAT_VAL  décalage et aller à l'état 22
    tCHAR_VAL   décalage et aller à l'état 23

    Val         aller à l'état 31
    Expression  aller à l'état 41


état 29

   16 Expression: tOP . Expression tCP

    tMOINS      décalage et aller à l'état 28
    tOP         décalage et aller à l'état 29
    tVAR        décalage et aller à l'état 30
    tINT_VAL    décalage et aller à l'état 21
    tFLOAT_VAL  décalage et aller à l'état 22
    tCHAR_VAL   décalage et aller à l'état 23

    Val         aller à l'état 31
    Expression  aller à l'état 42


état 30

   17 Expression: tVAR .

    $défaut  réduction par utilisation de la règle 17 (Expression)


état 31

   10 Expression: Val .

    $défaut  réduction par utilisation de la règle 10 (Expression)


état 32

   11 Expression: Expression . tPLUS Expression
   12           | Expression . tMOINS Expression
   13           | Expression . tFOIS Expression
   14           | Expression . tDIVISE Expression
   23 Instruction: tVAR tEGAL Expression . tVIRG Instruction

    tPLUS    décalage et aller à l'état 43
    tMOINS   décalage et aller à l'état 44
    tFOIS    décalage et aller à l'état 45
    tDIVISE  décalage et aller à l'état 46
    tVIRG    décalage et aller à l'état 47


état 33

   27 Instruction: tRETURN tOP tVAR . tCP tVIRG

    tCP  décalage et aller à l'état 48


état 34

   28 Instruction: tRETURN tOP Val . tCP tVIRG

    tCP  décalage et aller à l'état 49


état 35

   25 Instruction: tRETURN tVAR tVIRG .

    $défaut  réduction par utilisation de la règle 25 (Instruction)


état 36

   26 Instruction: tRETURN Val tVIRG .

    $défaut  réduction par utilisation de la règle 26 (Instruction)


état 37

   24 Instruction: tPRINTF tOP tVAR . tCP tVIRG Instruction

    tCP  décalage et aller à l'état 50


état 38

   22 Instruction: Type tVAR tCOMMA . Liste

    tVAR  décalage et aller à l'état 51

    Liste  aller à l'état 52


état 39

   20 Instruction: Type tVAR tEGAL . Expression tVIRG Instruction

    tMOINS      décalage et aller à l'état 28
    tOP         décalage et aller à l'état 29
    tVAR        décalage et aller à l'état 30
    tINT_VAL    décalage et aller à l'état 21
    tFLOAT_VAL  décalage et aller à l'état 22
    tCHAR_VAL   décalage et aller à l'état 23

    Val         aller à l'état 31
    Expression  aller à l'état 53


état 40

   21 Instruction: Type tVAR tVIRG . Instruction

    tVAR     décalage et aller à l'état 13
    tINT     décalage et aller à l'état 1
    tVOID    décalage et aller à l'état 2
    tCHAR    décalage et aller à l'état 3
    tFLOAT   décalage et aller à l'état 4
    tRETURN  décalage et aller à l'état 14
    tPRINTF  décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 29 (Instruction)

    Type         aller à l'état 16
    Instruction  aller à l'état 54


état 41

   11 Expression: Expression . tPLUS Expression
   12           | Expression . tMOINS Expression
   13           | Expression . tFOIS Expression
   14           | Expression . tDIVISE Expression
   15           | tMOINS Expression .

    $défaut  réduction par utilisation de la règle 15 (Expression)


état 42

   11 Expression: Expression . tPLUS Expression
   12           | Expression . tMOINS Expression
   13           | Expression . tFOIS Expression
   14           | Expression . tDIVISE Expression
   16           | tOP Expression . tCP

    tPLUS    décalage et aller à l'état 43
    tMOINS   décalage et aller à l'état 44
    tFOIS    décalage et aller à l'état 45
    tDIVISE  décalage et aller à l'état 46
    tCP      décalage et aller à l'état 55


état 43

   11 Expression: Expression tPLUS . Expression

    tMOINS      décalage et aller à l'état 28
    tOP         décalage et aller à l'état 29
    tVAR        décalage et aller à l'état 30
    tINT_VAL    décalage et aller à l'état 21
    tFLOAT_VAL  décalage et aller à l'état 22
    tCHAR_VAL   décalage et aller à l'état 23

    Val         aller à l'état 31
    Expression  aller à l'état 56


état 44

   12 Expression: Expression tMOINS . Expression

    tMOINS      décalage et aller à l'état 28
    tOP         décalage et aller à l'état 29
    tVAR        décalage et aller à l'état 30
    tINT_VAL    décalage et aller à l'état 21
    tFLOAT_VAL  décalage et aller à l'état 22
    tCHAR_VAL   décalage et aller à l'état 23

    Val         aller à l'état 31
    Expression  aller à l'état 57


état 45

   13 Expression: Expression tFOIS . Expression

    tMOINS      décalage et aller à l'état 28
    tOP         décalage et aller à l'état 29
    tVAR        décalage et aller à l'état 30
    tINT_VAL    décalage et aller à l'état 21
    tFLOAT_VAL  décalage et aller à l'état 22
    tCHAR_VAL   décalage et aller à l'état 23

    Val         aller à l'état 31
    Expression  aller à l'état 58


état 46

   14 Expression: Expression tDIVISE . Expression

    tMOINS      décalage et aller à l'état 28
    tOP         décalage et aller à l'état 29
    tVAR        décalage et aller à l'état 30
    tINT_VAL    décalage et aller à l'état 21
    tFLOAT_VAL  décalage et aller à l'état 22
    tCHAR_VAL   décalage et aller à l'état 23

    Val         aller à l'état 31
    Expression  aller à l'état 59


état 47

   23 Instruction: tVAR tEGAL Expression tVIRG . Instruction

    tVAR     décalage et aller à l'état 13
    tINT     décalage et aller à l'état 1
    tVOID    décalage et aller à l'état 2
    tCHAR    décalage et aller à l'état 3
    tFLOAT   décalage et aller à l'état 4
    tRETURN  décalage et aller à l'état 14
    tPRINTF  décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 29 (Instruction)

    Type         aller à l'état 16
    Instruction  aller à l'état 60


état 48

   27 Instruction: tRETURN tOP tVAR tCP . tVIRG

    tVIRG  décalage et aller à l'état 61


état 49

   28 Instruction: tRETURN tOP Val tCP . tVIRG

    tVIRG  décalage et aller à l'état 62


état 50

   24 Instruction: tPRINTF tOP tVAR tCP . tVIRG Instruction

    tVIRG  décalage et aller à l'état 63


état 51

   18 Liste: tVAR . tCOMMA Liste
   19      | tVAR . tVIRG Instruction

    tCOMMA  décalage et aller à l'état 64
    tVIRG   décalage et aller à l'état 65


état 52

   22 Instruction: Type tVAR tCOMMA Liste .

    $défaut  réduction par utilisation de la règle 22 (Instruction)


état 53

   11 Expression: Expression . tPLUS Expression
   12           | Expression . tMOINS Expression
   13           | Expression . tFOIS Expression
   14           | Expression . tDIVISE Expression
   20 Instruction: Type tVAR tEGAL Expression . tVIRG Instruction

    tPLUS    décalage et aller à l'état 43
    tMOINS   décalage et aller à l'état 44
    tFOIS    décalage et aller à l'état 45
    tDIVISE  décalage et aller à l'état 46
    tVIRG    décalage et aller à l'état 66


état 54

   21 Instruction: Type tVAR tVIRG Instruction .

    $défaut  réduction par utilisation de la règle 21 (Instruction)


état 55

   16 Expression: tOP Expression tCP .

    $défaut  réduction par utilisation de la règle 16 (Expression)


état 56

   11 Expression: Expression . tPLUS Expression
   11           | Expression tPLUS Expression .
   12           | Expression . tMOINS Expression
   13           | Expression . tFOIS Expression
   14           | Expression . tDIVISE Expression

    tFOIS    décalage et aller à l'état 45
    tDIVISE  décalage et aller à l'état 46

    $défaut  réduction par utilisation de la règle 11 (Expression)


état 57

   11 Expression: Expression . tPLUS Expression
   12           | Expression . tMOINS Expression
   12           | Expression tMOINS Expression .
   13           | Expression . tFOIS Expression
   14           | Expression . tDIVISE Expression

    tFOIS    décalage et aller à l'état 45
    tDIVISE  décalage et aller à l'état 46

    $défaut  réduction par utilisation de la règle 12 (Expression)


état 58

   11 Expression: Expression . tPLUS Expression
   12           | Expression . tMOINS Expression
   13           | Expression . tFOIS Expression
   13           | Expression tFOIS Expression .
   14           | Expression . tDIVISE Expression

    $défaut  réduction par utilisation de la règle 13 (Expression)


état 59

   11 Expression: Expression . tPLUS Expression
   12           | Expression . tMOINS Expression
   13           | Expression . tFOIS Expression
   14           | Expression . tDIVISE Expression
   14           | Expression tDIVISE Expression .

    $défaut  réduction par utilisation de la règle 14 (Expression)


état 60

   23 Instruction: tVAR tEGAL Expression tVIRG Instruction .

    $défaut  réduction par utilisation de la règle 23 (Instruction)


état 61

   27 Instruction: tRETURN tOP tVAR tCP tVIRG .

    $défaut  réduction par utilisation de la règle 27 (Instruction)


état 62

   28 Instruction: tRETURN tOP Val tCP tVIRG .

    $défaut  réduction par utilisation de la règle 28 (Instruction)


état 63

   24 Instruction: tPRINTF tOP tVAR tCP tVIRG . Instruction

    tVAR     décalage et aller à l'état 13
    tINT     décalage et aller à l'état 1
    tVOID    décalage et aller à l'état 2
    tCHAR    décalage et aller à l'état 3
    tFLOAT   décalage et aller à l'état 4
    tRETURN  décalage et aller à l'état 14
    tPRINTF  décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 29 (Instruction)

    Type         aller à l'état 16
    Instruction  aller à l'état 67


état 64

   18 Liste: tVAR tCOMMA . Liste

    tVAR  décalage et aller à l'état 51

    Liste  aller à l'état 68


état 65

   19 Liste: tVAR tVIRG . Instruction

    tVAR     décalage et aller à l'état 13
    tINT     décalage et aller à l'état 1
    tVOID    décalage et aller à l'état 2
    tCHAR    décalage et aller à l'état 3
    tFLOAT   décalage et aller à l'état 4
    tRETURN  décalage et aller à l'état 14
    tPRINTF  décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 29 (Instruction)

    Type         aller à l'état 16
    Instruction  aller à l'état 69


état 66

   20 Instruction: Type tVAR tEGAL Expression tVIRG . Instruction

    tVAR     décalage et aller à l'état 13
    tINT     décalage et aller à l'état 1
    tVOID    décalage et aller à l'état 2
    tCHAR    décalage et aller à l'état 3
    tFLOAT   décalage et aller à l'état 4
    tRETURN  décalage et aller à l'état 14
    tPRINTF  décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 29 (Instruction)

    Type         aller à l'état 16
    Instruction  aller à l'état 70


état 67

   24 Instruction: tPRINTF tOP tVAR tCP tVIRG Instruction .

    $défaut  réduction par utilisation de la règle 24 (Instruction)


état 68

   18 Liste: tVAR tCOMMA Liste .

    $défaut  réduction par utilisation de la règle 18 (Liste)


état 69

   19 Liste: tVAR tVIRG Instruction .

    $défaut  réduction par utilisation de la règle 19 (Liste)


état 70

   20 Instruction: Type tVAR tEGAL Expression tVIRG Instruction .

    $défaut  réduction par utilisation de la règle 20 (Instruction)
